# CEMArtifacts

./: CMakeLists.txt
CEMArtifacts/: CEMArtifacts.py  CMakeLists.txt
CEMArtifacts/Resources/UI/: CEMArtifacts.ui
example_dataset_with_mapping/: annotations.csv
